[package]
name = "text_block_layout"
version = "0.1.0"
authors = ["Joakim Akerblom <per.joakim.eriksson@gmail.com>"]
edition = "2018"
description = "Library for joining together blocks of text characters, in for example a TUI."
repository = "https://github.com/jockbert/text-block-layout"
license = "MIT"
keywords = ["TUI", "block", "box", "text", "layout"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
