[package]
name = "text_block_layout"
version = "1.0.0"
authors = ["Joakim Akerblom <per.joakim.eriksson@gmail.com>"]
edition = "2018"
description = "Library for joining together blocks of text characters, in for example a TUI or text document."
repository = "https://github.com/jockbert/text_block_layout"
license = "MIT"
keywords = ["TUI", "block", "box", "text", "layout"]
readme = "README.md"
categories = ["visualization"]

[dependencies]
unicode-width = "0.1.8"
