[package]
name = "text_block_layout"
version = "1.2.1"
authors = ["Joakim Akerblom <per.joakim.eriksson@gmail.com>"]
edition = "2018"
description = "Library for joining together blocks of text characters, in for example a TUI or text document."
repository = "https://github.com/jockbert/text_block_layout"
license = "MIT"
keywords = ["TUI", "block", "box", "text", "layout"]
readme = "README.md"
categories = ["visualization"]

[dependencies]
unicode-width = "0.2.2"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
monkey_test = "0.9.2"

[[bench]]
name = "add_multiple_texts"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "join_blocks"
harness = false
